[project]
name = "data-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "streamlit>=1.51.0",
    "tabulate>=0.9.0",
    "xlrd>=2.0.2",
]
